<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/coffee_decrement"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        android:text="@string/decrement_label"/>

    <TextView
        android:id="@+id/coffee_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="24sp"
        android:text="@string/default_coffee_count"
        android:layout_gravity="center_vertical"/>

    <Button
        android:id="@+id/coffee_increment"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        android:text="@string/increment_label"/>

</LinearLayout>