...
                    android:text="Total price"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/total_price_toolbar"
                    android:layout_marginLeft="24dp"
                    android:textSize="36sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/delivery_info"
                    android:hint="@string/deliver_message_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:paddingBottom="12dp" />
...
