<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/coffee_name"
        android:text="Latte"
        android:textSize="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/coffee_price"
        android:text="$5.0"
        android:textSize="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coffee_name"
        android:layout_alignLeft="@+id/coffee_name"
        android:layout_alignStart="@+id/coffee_name"
        android:layout_marginBottom="8dp"/>

    <com.alexzh.simplecoffeeorder.customview.CoffeeCountPicker
        android:id="@+id/coffee_count_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/coffee_price"
        android:layout_alignRight="@+id/coffee_name"
        android:layout_alignEnd="@+id/coffee_name"
        android:layout_marginRight="12dp"/>

</RelativeLayout>